feature-templates/nCino/dataset/01oY3L0F-Collateral Types/.store/metadata/objects/LLC_BI__Product_Collateral_Type__c.object
<CustomObject>
    <description>This junction object enables a user to connect a collateral type to a product in the product catalog.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use this lookup field to select a collateral type to connect to a product.</description>
        <inlineHelpText>Use this lookup field to select a collateral type to connect to a product.</inlineHelpText>
        <label>Collateral Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral Types</relationshipLabel>
        <relationshipName>Collateral_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</description>
        <inlineHelpText>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use this lookup field to select a product to connect to a collateral type.</description>
        <inlineHelpText>Use this lookup field to select a product to connect to a collateral type.</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Providers__c</fullName>
        <description>Administrators populate this optional text field to inform the system which external valuation provider to use. This field supports multiple valuations providers using a comma delimited list. By default, this field is unpopulated.</description>
        <inlineHelpText>Enter external valuations providers in a comma delimited list to allow the system to assign valuation methods to Product-Collateral type.</inlineHelpText>
        <label>Valuation Providers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to enable the collateral type for the product in Customer Portal.</description>
        <inlineHelpText>Select this checkbox to enable the collateral type for the product in Customer Portal.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Collateral Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Valuation_Providers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Product_Collateral_Types</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Collateral_Type__c</columns>
        <columns>nPortal__Is_Portal_Enabled__c</columns>
        <columns>LLC_BI__Valuation_Providers__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product Collateral Types</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCT-{00000000}</displayFormat>
        <label>number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Collateral Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>